--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Harper</title>
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Oswald:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header>
+        <h1>Welcome!</h1>
+    </header>
     
 </body>
 </html>
