--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome!</h1>
+    <header class="header-nav">
+        <nav class="header-nav">
+            <ul class="header-nav__list">
+                <li class="header-nav__list-item"><a class="header-nav__link-item" href="#">Home</a></li>
+                <li class="header-nav__list-item"><a class="header-nav__link-item" href="">About</a></li>
+                <li class="header-nav__list-item"><a class="header-nav__link-item--brand" href="">Harper</a></li>
+                <li class="header-nav__list-item"><a class="header-nav__link-item" href="">Blog</a></li>
+                <li class="header-nav__list-item"><a class="header-nav__link-item" href="">Contact</a></li>
+            </ul>
+        </nav>
+        
+        <div class="main-profile-pic">
+            <!-- use image alternative -->
+            <img src="assets/home-image-1.jpg" alt="Profile picture of woman's face surrounded by balloons">
+        </div>
+        <div class="emblem">
+            <h1 class="header"><span class="">everday life with</span>Harper</h1>
+            <img src="" alt="everyday life with Harper">
+        </div>
     </header>
     
 </body>
