--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             <img src="assets/home-image-1.jpg" alt="Profile picture of woman's face surrounded by balloons">
         </div>
         <div class="emblem">
-            <h1 class="header"><span class="">everday life with</span>Harper</h1>
-            <img src="" alt="everyday life with Harper">
+            <h1 class="header">
+                <span class="slogan">everday life with</span>
+                Harper</h1>
+            <!-- <img src="" alt="everyday life with Harper"> -->
         </div>
     </header>
     
