working on the blog highlights section

--- a/index.html
+++ b/index.html
@@ -107,9 +107,29 @@
         </section>
         <!-- site overview section ends -->
         <!-- blog highlights section begins -->
-        <section>
-
-
+        <section class="blog-highlights">
+            <div class="blog-top">
+                <div class="blog-top--pic">
+                    <img class="blog--image" src="assets/home-image-3.jpg" alt="people surfing in the ocean seen from a distance">
+                </div>
+                <div class="blog--content">
+                    <h2 class="blog__title">Harper's Travels</h2>
+                    <p class="blog__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, provident aut. Placeat, magnam ex, amet suscipit necessitatibus, assumenda voluptates repellendus cupiditate eum totam laboriosam dicta quis a? Quos, dolorum ea voluptates distinctio debitis minima dolorem.</p>
+                    <a class="blog__button" href="#">Find out more</a>
+                </div>
+            </div>
+            <div class="blog-bottom">
+                <div class="blog-bottom--pic">
+                    <img class="blog--image" src="assets/home-image-4.jpg" alt="The corner of a brick building with pipes on the side wall">
+                </div>
+                <div class="blog--content">
+                    <h2 class="blog__title">Favourite Things</h2>
+                    <p class="blog__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, provident aut. Placeat, magnam ex, amet suscipit necessitatibus,
+                        assumenda voluptates repellendus cupiditate eum totam laboriosam dicta quis a? Quos, dolorum ea voluptates distinctio
+                        debitis minima dolorem.</p>
+                    <a class="blog__button" href="#">Find out more</a>
+                </div>
+            </div>
 
         </section>
         <!-- blog highlights section ends -->
