added the blog.html page and associated styling

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <!-- header section begins -->
-    <header class="header-nav">
+    <header class="header">
         <nav class="header-nav wrapper">
             <ul class="header-nav__list">
                 <li class="header-nav__list-item"><a class="header-nav__link-item" href="#">Home</a></li>
                 <li class="header-nav__list-item"><a class="header-nav__link-item" href="">About</a></li>
                 <li class="header-nav__list-item"><a class="header-nav__link-item--brand" href="">Harper</a></li>
-                <li class="header-nav__list-item"><a class="header-nav__link-item" href="">Blog</a></li>
+                <li class="header-nav__list-item"><a class="header-nav__link-item" href="blog.html">Blog</a></li>
                 <li class="header-nav__list-item"><a class="header-nav__link-item" href="">Contact</a></li>
             </ul>
         </nav>
