worked on blog page html and styling

--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
     </header>
     <!-- header section ends -->
     <!-- main section begins -->
-    <main class="wrapper">
+    <main class="main-content wrapper">
         <!-- the bio and recent posts section begins -->
         <section class="info">
             <div class="blog-bio">
@@ -56,14 +56,53 @@
                         <li class="recent-posts__list--item"><a class="recent-posts__list--link" href="#">Lorem ipsum dolor sit.</a></li>
                     </ul>
                 </nav>
-
-
             </div>
 
         </section>
-        <section class="article">
-            <h1>My Favourite Travel Destinations</h1>
+        <!-- main article begins -->
+        <section class="article-main">
+            <article class="article">
+                <h1 class="article__title">My Favourite Travel Destinations</h1>
+                <p class="article__text">Monday October 8th, 2018 by Harper</p>
+                <p class="article__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor quidem velit vero sequi, laborum accusamus.</p>
+                <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium distinctio quae ab voluptatibus itaque maxime repellendus dolorem commodi amet quas!</p>
+                <p class="article__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum perspiciatis distinctio ratione laboriosam quia enim exercitationem quasi officia impedit. Numquam ullam, nihil dolores adipisci fugit aliquid perspiciatis recusandae, voluptate sapiente iure neque ut vel delectus cumque! Aperiam, laboriosam modi nostrum, labore incidunt ipsum ea rem fugit molestias odit unde corrupti.</p>
+                <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis iure tenetur porro dolorum nulla maiores tempore, optio quis fugit recusandae.</p>
+                <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, inventore?</p>
+                <p class="article__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio doloribus cupiditate laboriosam, laudantium at minus repellendus, velit aspernatur corrupti illo quia incidunt amet vitae id illum animi aperiam. Exercitationem dolor ab maiores libero animi. Quidem vero architecto maiores quia delectus.</p>
+            </article>
+        
+        
+        <section class="comment">
+            <div class="comment__user">
+                <div class="comment__image">
+                    <img class="comment__image--profile" src="assets/blog-image-3.jpg" alt="headshot of a woman with black hair style in a bob">
+                </div>
+                <div class="comment__content">
+                    <h3 class="comment__title">Tuesday October 9th, 2018 by Maggie</h3>
+                    <p class="comment__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, tempora laudantium nostrum repellendus nam animi accusantium! Officia labore fugiat enim.</p>
+                </div>
+            </div>
+
+            <div class="comment__user">
+                <div class="comment__image">
+                    <img class="comment__image--profile" src="assets/blog-image-4.jpg" alt="headshot of a woman with a blonde bob blowing a bubble with gum">
+                </div>
+                <div class="comment__content">
+                    <h3 class="comment__title">Wednesday October 10th, 2018 by Daisy</h3>
+                    <p class="comment__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, tempora laudantium nostrum repellendus nam animi accusantium!
+                        Officia labore fugiat enim.</p>
+                </div>
+            </div>
         </section>
+        <!-- form begins -->
+        <form action="">
+
+
+        </form>
+        <!-- form ends -->
+        </section>
+        <!-- main article ends -->
     </main>
     <!-- main section ends -->
     <!-- footer section begins -->
