start contact and blog page, almost finished home page. Still need to change all the colours of my templates to the real colour scheme but the styling is done

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header class="header">
         <nav class="header-nav wrapper">
             <ul class="header-nav__list">
-                <li class="header-nav__list-item"><a class="header-nav__link-item" href="#">Home</a></li>
-                <li class="header-nav__list-item"><a class="header-nav__link-item" href="">About</a></li>
-                <li class="header-nav__list-item"><a class="header-nav__link-item--brand" href="">Harper</a></li>
+                <li class="header-nav__list-item"><a class="header-nav__link-item" href="index.html">Home</a></li>
+                <li class="header-nav__list-item"><a class="header-nav__link-item" href="#">About</a></li>
+                <li class="header-nav__list-item"><a class="header-nav__link-item--brand" href="index.html">Harper</a></li>
                 <li class="header-nav__list-item"><a class="header-nav__link-item" href="blog.html">Blog</a></li>
-                <li class="header-nav__list-item"><a class="header-nav__link-item" href="">Contact</a></li>
+                <li class="header-nav__list-item"><a class="header-nav__link-item" href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="header-content wrapper">
@@ -120,7 +120,9 @@
                     <h2 class="blog-bottom__title">Favourite Things</h2>
                     <p class="blog-bottom__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam vero laudantium ducimus aliquid asperiores aut velit saepe quisquam,
                     dignissimos hic iste blanditiis laboriosam reprehenderit possimus.</p>
-                    <a class="blog-bottom__button" href="#">Read more</a>
+                    <div class="blog-bottom__case">
+                        <a class="blog-bottom__button" href="#">Read more</a>
+                    </div>
                 </div>
             </div>
 
