making blog page responsivegit add -Aocket:

--- a/blog.html
+++ b/blog.html
@@ -47,8 +47,10 @@
                 <div class="blog-bio__image">
                     <img class="blog-bio__image--pic" src="assets/blog-image-2.jpg" alt="Birds eye view of Harper lying on a grey and blue concrete floor">
                 </div>
-                <h2 class="blog-bio__title">About Harper</h2>
-                <p class="blog-bio__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta vitae vel harum! Find out more.</p>
+                <div class="blog-bio__content">
+                    <h2 class="blog-bio__title">About Harper</h2>
+                    <p class="blog-bio__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta vitae vel harum! Find out more.</p>
+                </div>
             </div>
             <div class="recent-posts">
                 <h2 class="recent-posts__title">Recent Posts</h2>
@@ -64,7 +66,7 @@
 
         </aside>
         <!-- main article begins -->
-        <section class="article-main">
+        <section class="article-main wrapper">
             <article class="article">
                 <h1 class="article__title">My Favourite Travel Destinations</h1>
                 <p class="article__text">Monday October 8th, 2018 by Harper</p>
