made the blog, contact and main page responsive for tablet and mobile screens

--- a/blog.html
+++ b/blog.html
@@ -10,9 +10,12 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="background-blog">
     <!-- header section begins -->
     <header class="blog-header">
+        <div class="hamburger-menu">
+            <i class="hamburger-menu--link fas fa-bars"></i>
+        </div>
         <nav class="header-nav">
             <ul class="header-nav__list">
                 <li class="header-nav__list-item">
