--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,12 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="background-contact">
     <!-- header section begins -->
     <header class="contact-header">
+        <div class="hamburger-menu">
+            <i class="hamburger-menu--link fas fa-bars"></i>
+        </div>
         <nav class="header-nav">
             <ul class="header-nav__list">
                 <li class="header-nav__list-item">
@@ -32,7 +35,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="blog-header__title wrapper">
+        <div class="contact-header__title wrapper">
             <h1>Contact Me</h1>
         </div>
     
