--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <!-- header section begins -->
     <header class="header">
+        <div class="hamburger-menu">
+            <i class="hamburger-menu--link fas fa-bars"></i>
+        </div>
         <nav class="header-nav wrapper">
             <ul class="header-nav__list">
                 <li class="header-nav__list-item"><a class="header-nav__link-item" href="index.html">Home</a></li>
@@ -80,7 +83,7 @@
                             <div class="overview--background">
                                 <i class="overview--icon fas fa-desktop"></i>
                             </div>
-                            <h3 class="overview--item">About</h3>
+                            <h3 class="overview--item">Blog</h3>
                         </div>
                         <p class="overview--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, enim exercitationem dicta commodi accusamus excepturi!</p>
                     </div>
@@ -134,7 +137,7 @@
                 <div class="journey__image">
                     <img class="journey__image--pic" src="assets/home-image-5.jpg" alt="profile picture of Harper with long black hair">
                 </div>
-                <div class="journey--content wrapper">
+                <div class="journey--content">
                     <h2 class="journey__title">Harper's Journey</h2>
                     <p class="journey__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit modi accusantium blanditiis accusamus, voluptate deserunt, perspiciatis tempora facere vitae aliquam dicta excepturi commodi soluta quidem vel. Beatae consequatur aperiam, tenetur minima maiores adipisci officia unde est sunt nihil rem suscipit.</p>
                     <a class="journey__button" href="#">Find out more</a>
