add links to the overview section with hover effect and re-add the blue circle backgrounds for the icons in the overview section :lipstick:

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <div class="overview--background">
                                 <i class="overview--icon fas fa-image"></i>
                             </div>
-                            <h3 class="overview--item">Photos</h3>
+                            <h3 class="overview--item"><a class="overview--link" href="#">Photos</a></h3>
                         </div>
                         <p class="overview--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, enim exercitationem dicta commodi accusamus excepturi!</p>
                     </div>
@@ -73,7 +73,7 @@
                             <div class="overview--background">
                                 <i class="overview--icon fas fa-user"></i>
                             </div>
-                            <h3 class="overview--item">About</h3>
+                            <h3 class="overview--item"><a class="overview--link" href="#">About</a></h3>
                         </div>
                         <p class="overview--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, enim exercitationem dicta commodi accusamus excepturi!</p>
                     </div>
@@ -83,7 +83,7 @@
                             <div class="overview--background">
                                 <i class="overview--icon fas fa-desktop"></i>
                             </div>
-                            <h3 class="overview--item">Blog</h3>
+                            <h3 class="overview--item"><a class="overview--link" href="blog.html">Blog</a></h3>
                         </div>
                         <p class="overview--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, enim exercitationem dicta commodi accusamus excepturi!</p>
                     </div>
@@ -93,7 +93,7 @@
                             <div class="overview--background">
                                 <i class="overview--icon fas fa-phone"></i>
                             </div>
-                            <h3 class="overview--item">Contact Me</h3>
+                            <h3 class="overview--item"><a class="overview--link" href="contact.html">Contact Me</a></h3>
                         </div>
                         <p class="overview--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, enim exercitationem dicta commodi accusamus excepturi!</p>
                     </div>
