added alt text for the three gallery images on the index.html page

--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
         <section class="gallery">
             <ul class="gallery__list wrapper">
                 <li class="gallery__list--item">
-                    <img class="gallery__list--image" src="assets/home-image-6.jpg" alt="">
+                    <img class="gallery__list--image" src="assets/home-image-6.jpg" alt="the corner of a pink building and the sky above it">
                 </li>
                 <li class="gallery__list--item">
-                    <img class="gallery__list--image" src="assets/home-image-7.jpg" alt="">
+                    <img class="gallery__list--image" src="assets/home-image-7.jpg" alt="the sky with clouds filled with orange and blue hues">
                 </li>
                 <li class="gallery__list--item">
-                    <img class="gallery__list--image" src="assets/home-image-8.jpg" alt="">
+                    <img class="gallery__list--image" src="assets/home-image-8.jpg" alt="the sky filled with clouds of pink and blue hues">
                 </li>
             </ul>
 
