added skip to maincontent feature to all html pages

--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="background-blog">
+    <a href="#maincontent" class="skip-link">Skip to main content.</a>
     <!-- header section begins -->
     <header class="blog-header">
         <div class="hamburger-menu">
@@ -69,7 +70,8 @@
 
         </aside>
         <!-- main article begins -->
-        <section class="article-main wrapper">
+        
+        <section class="article-main wrapper" id="maincontent">
             <article class="article">
                 <h1 class="article__title">My Favourite Travel Destinations</h1>
                 <p class="article__text">Monday October 8th, 2018 by Harper</p>
