--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <a href="#maincontent" class="skip-link">Skip to main content.</a>
     <!-- header section begins -->
     <header class="header">
         <div class="hamburger-menu">
@@ -38,7 +39,7 @@
         </div>
     </header>
     <!-- header section ends -->
-    <main>
+    <main id="maincontent">
         <!-- who's harper section begins -->
         <section class="intro-bio">
             <div class="about wrapper">
